# fql-squad-selector

./: .gitignore  README.md  _types.py  a01_get_player_data.py  a02_pick_squad.py  pyproject.toml  requirements.txt
